# LGP

./: CMakeLists.txt  README.md  SConstruct  dependencies.txt  requirements.txt
configs/: 1_gradient_baldwin.yaml  1_gradient_lamark.yaml  1_gradient_original.yaml  1_gradient_static_constants.yaml  2_continuous_gradient_baldwin.yaml  2_continuous_gradient_lamark.yaml  2_continuous_gradient_original.yaml  2_continuous_gradient_static_constants.yaml  3_gradient_baldwin_cost.yaml  3_gradient_lamark_cost.yaml  3_gradient_original_cost.yaml  3_gradient_static_constants_cost.yaml  4_continuous_gradient_baldwin_cost.yaml  4_continuous_gradient_lamark_cost.yaml  4_continuous_gradient_original_cost.yaml  4_continuous_gradient_static_constants_cost.yaml
datasets/maze_models/: cuisine.xml  empty_arena.pbm  gradient.xml  maze_medium.pbm  maze_medium_1.pbm
datasets/mujoco_models/: half_cheetah_hurdles.xml
datasets/one_hot_8/: song_0.csv:Zone.Identifier
scripts/: extract_best_agent_instructions.py
scripts/plot/: ALife2024-Figure2_plot_scatter.py  ALife2024_Figure2_get_data.sh  ALife2024_Figure3.sh  best_agent_vector_sizes.py  get_test_mse_all_repeats.py  gptpxxi-plot-ops.py  gptpxxi-plot-train.py  plot-tpg-trainingCurves.R  replay-mutation-rates.py  tpg-bar-graph.py  tpg-box-plots.py  tpg-box-plots_test.py  tpg-counter_visitations.py  tpg-plot-evolve.py  tpg-plot-horizon-alife2024.py  tpg-plot-horizon-alife2024.py:Zone.Identifier  tpg-plot-horizon.py  tpg-plot-stats.sh
scripts/plot/alife_scripts/: bar_graph_program_counter.py  coordinate_graph.py  dot_heat_map.py  fitness_register_efficiency_correlation.py  generation_count.py  heat_map_location_maze.py  leg_break_plot.py  map_elites_animation.py  map_elites_heat_map.py  mean_std.py  plot_modes.py  programs_used_counter_for_graph.py  remove_unused_tpg-plot-program-weights_binary copy.py  reward_comparison.py  scatter_plot.py  scatter_plot_pareto.py  tpg-p_values.py  tpg-plot-episodes.py  tpg-plot-learning.py  tpg-plot-learning_validation.py  tpg-plot-learning_validation_reacher.py  tpg-plot-program-weights.py  tpg-plot-program-weights_binary.py  tpg-proportion.py  usage_bar.py
scripts/run/: tpg-cleanup.sh  tpg-run-mpi.sh  tpg-run-slurm.sh  tpg-run-slurm_long.sh  tpg-run-slurm_short.sh
src/: CMakeLists.txt  SConscript
src/cli/tpg/: commands.py  config.py  helpers.py
src/engine/: ActionWrappers.h  CMakeLists.txt  MemoryEigen.h  RegisterMachine.cc  RegisterMachine.h  SConscript  TPG.cc  TPG.h  hebbian.cc  hebbian.h  instruction.cc  instruction.h  misc.cc  misc.h  point.cc  point.h  state.h  team.cc  team.h  tpg_eval_mpi.h  unused_code_chunks.cpp
src/environments/: TaskEnv.h  TaskEnvFactory.cc
src/environments/classic_control/: Acrobot.h  CartCentering.h  CartPole.h  ClassicControlEnv.h  MountainCar.h  MountainCarContinuous.h  Pendulum.h  SConscript
src/environments/fastsim/: CMakeLists.txt  FastSimEnvironment.h  FastSim_Gradient.h  FastSim_Maze.h
src/environments/mujoco/: MujocoEnv.h  Mujoco_Ant_v4.h  Mujoco_Half_Cheetah_Hurdles_v4.h  Mujoco_Half_Cheetah_v4.h  Mujoco_Hopper_v4.h  Mujoco_Humanoid_Standup_v4.h  Mujoco_Inverted_Double_Pendulum_v4.h  Mujoco_Inverted_Pendulum_v4.h  Mujoco_Reacher_v4.h  README.md
src/environments/sequence/: RecursiveForecast.h  RecursiveForecast_ali.h
src/experiments/: CMakeLists.txt  SConscript  api_client.cc  api_client.h
src/experiments/evaluators/: EvalData.cc  EvalData.h  evaluators_control.h  evaluators_forecast.h  evaluators_forecast_ali.h  evaluators_gradient.h  evaluators_maze.h  evaluators_mujoco.h  phylogenetic_fitness.h
src/experiments/runners/: training_runner.cc  training_runner.h
src/logging/metrics/selection/: selection_metrics.cc  selection_metrics.h  selection_metrics_builder.cc  selection_metrics_builder.h
src/logging/storage/selection/: selection_storage.cc
